<resources>
    <string name="app_name">达到</string>

    <string name="rv_loading">正在加载...</string>
    <string name="rv_loading_complete">已加载全部内容</string>

    <string name="zhanghao">请输入你的账号</string>
    <string name="shouji">请输入手机号</string>
    <string name="mima">请输入密码</string>
    <string name="yanzhengma">请输入验证码</string>
    <string name="yanzheng">验证</string>
    <string name="mima_new">请输入新的密码</string>
    <string name="mima_queren">请确认密码</string>
    <string name="next">下一步</string>
    <string name="wancheng">完成</string>
    <string name="quxiao">取消</string>
    <string name="xingqu">你对以下感兴趣的是？</string>
    <string name="queding">确定</string>
    <string name="wangjimima">忘记密码</string>
    <string name="xinrenzhuce">新人注册</string>
    <string name="denglu">登陆</string>
    <string name="sanfangdenglu">第三方登陆</string>
    <string name="nideshengrishi">你的生日是？</string>
    <string name="shengrijianjie">为了给你带来更有趣回忆，不要选错哦~</string>
    <string name="xingbie">你的性别是？</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="shenfen">你的身份是？</string>
    <string name="main1">学习</string>
    <string name="main2">课程库</string>
    <string name="main3">发现</string>
    <string name="main4">我</string>
    <string name="main1_el">MY COURSE</string>
    <string name="main2_el">All COURSES</string>
    <string name="main3_el">DISCOVER</string>
    <string name="zhuanlankecheng">专栏课程</string>
    <string name="kechengpaihang">课程排行</string>
    <string name="title_lizi">乔布斯的魅力演讲</string>
    <string name="message_lizi">讲述演讲所用技巧的图书，“演讲”已经成为商业沟通的必需</string>
    <string name="all_class">查看全部课程</string>
    <string name="price">¥ 99</string>
    <string name="xueguo">1036人学过</string>
    <string name="sousuo">搜索感兴趣的内容</string>
    <string name="remen">热门</string>
    <string name="nandu">难度</string>
    <string name="jiage">价格</string>
    <string name="cancle">取消</string>
    <string name="select">搜索</string>
    <string name="xiangqing">详情</string>
    <string name="pingjia">评价</string>
    <string name="kehoufenxiang">课后分享</string>
    <string name="kechengjianjie">课程简介</string>
    <string name="kechengjiangshi">课程讲师</string>
    <string name="faxingshang">课程发行商</string>
    <string name="mulu">授课目录</string>
    <string name="kechenggaishu">课程概述</string>
    <string name="shoucang">收藏</string>
    <string name="zixun">咨询</string>
    <string name="canjiakecheng">参加课程</string>
    <string name="time">一小时前</string>
    <string name="jiaoshixiangce">教师相册</string>
    <string name="xiangguankecheng">相关课程</string>
    <string name="pay_message">还需支付</string>
    <string name="pay_zhifu">立即支付</string>
    <string name="my_courser">我的课程</string>
    <string name="jinrixinzhi">今日新知</string>
    <string name="see_all">查看全部新知</string>
    <string name="wupingjia">暂时还木有评价啊~ ~</string>
    <string name="wb">微博</string>
    <string name="wx">微信好友</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="tuijian">推荐</string>
    <string name="guanzhu">关注</string>
    <string name="zuixin">最新</string>
    <string name="jingxuan_tuijian"># 精选推荐 #</string>
    <string name="remen_tuijian"># 热门推荐 #</string>
    <string name="jingxuan">精选</string>
    <string name="all">全部</string>
    <string name="canyuhuati">参与话题</string>
    <string name="fabiaopinlun">发表评论...</string>
    <string name="jiaguanzhu">+ 关注</string>
    <string name="num">12344515</string>
    <string name="quanbupinlun">全部评论</string>
    <string name="huifu">回复</string>
    <string name="fasong">发送</string>

</resources>
