<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="19dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/title_lizi"
            android:textColor="@color/D"
            android:textSize="@dimen/T10" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="19dp">


            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_message"
                android:textColor="@color/D"
                android:textSize="@dimen/T10" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/price"
                android:textColor="@color/K"
                android:textSize="@dimen/T1"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="39dp"
        android:background="#e5e5e5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/off_commit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancle"
            android:textColor="@color/A"
            android:textSize="@dimen/T1" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#e5e5e5" />

        <TextView
            android:id="@+id/commit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pay_zhifu"
            android:textColor="@color/F"
            android:textSize="@dimen/T1"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>