<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout01" />


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/nideshengrishi"
        android:textColor="@color/B"
        android:textSize="@dimen/T2" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/shengrijianjie"
        android:textColor="@color/G"
        android:textSize="@dimen/T4" />


    <FrameLayout
        android:id="@+id/picker_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/anniu_next"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="15dp"
        android:text="@string/next"
        android:textColor="@color/F"
        android:textSize="@dimen/T1" />


</RelativeLayout>