<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/wb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:background="@drawable/wb_share" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/wb"
                    android:textColor="@color/B"
                    android:textSize="@dimen/T4" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/wx"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:background="@drawable/wx_share" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/wx"
                    android:textColor="@color/B"
                    android:textSize="@dimen/T4" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/pyq"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:background="@drawable/pyq_share" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/pengyouquan"
                    android:textColor="@color/B"
                    android:textSize="@dimen/T4" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/qq"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:background="@drawable/qq_share" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/qq"
                    android:textColor="@color/B"
                    android:textSize="@dimen/T4" />

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="@drawable/yinying" />


        <TextView
            android:id="@+id/cancle"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/B"
            android:textSize="@dimen/T1" />

    </LinearLayout>


</LinearLayout>