<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/jianjie" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/kechengjianjie"
            android:textColor="@color/D"
            android:textSize="@dimen/T2"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/courser_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="19dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/message_lizi"
        android:textColor="@color/B"
        android:textSize="@dimen/T3" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="39dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/jiangshi" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/kechengjiangshi"
            android:textColor="@color/D"
            android:textSize="@dimen/T2"
            android:textStyle="bold" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/jiangshi_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="19dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="39dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/faxingshang" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/faxingshang"
            android:textColor="@color/D"
            android:textSize="@dimen/T2"
            android:textStyle="bold" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/faxingshang_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="19dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="39dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/gaishu" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/kechenggaishu"
            android:textColor="@color/D"
            android:textSize="@dimen/T2"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/courser_gaishu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="19dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/message_lizi"
        android:textColor="@color/B"
        android:textSize="@dimen/T3" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="39dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/mulu" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/mulu"
            android:textColor="@color/D"
            android:textSize="@dimen/T2"
            android:textStyle="bold" />

    </LinearLayout>


    <com.myp.huiao.widget.CustomExpandableListView
        android:id="@+id/expand_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>