<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:id="@+id/buttom_tab"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">


        <com.xyz.tabitem.BottmTabItem
            android:id="@+id/main1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:xyzIcon="@drawable/main1"
            app:xyzIconHeight="23dp"
            app:xyzIconWidth="23dp"
            app:xyzSelectIcon="@drawable/main1_xz"
            app:xyzSelectState="true"
            app:xyzTitle="@string/main1"
            app:xyzTitleColor="@color/G"
            app:xyzTitleSelectColor="@color/J"
            app:xyzTitleSize="@dimen/T7"
            app:xyzTitleTop="5dp" />

        <com.xyz.tabitem.BottmTabItem
            android:id="@+id/main2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:xyzIcon="@drawable/main2"
            app:xyzIconHeight="23dp"
            app:xyzIconWidth="23dp"
            app:xyzSelectIcon="@drawable/main2_xz"
            app:xyzSelectState="false"
            app:xyzTitle="@string/main2"
            app:xyzTitleColor="@color/G"
            app:xyzTitleSelectColor="@color/J"
            app:xyzTitleSize="@dimen/T7"
            app:xyzTitleTop="5dp" />

        <com.xyz.tabitem.BottmTabItem
            android:id="@+id/main3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:xyzIcon="@drawable/main3"
            app:xyzIconHeight="23dp"
            app:xyzIconWidth="23dp"
            app:xyzSelectIcon="@drawable/main3_xz"
            app:xyzSelectState="false"
            app:xyzTitle="@string/main3"
            app:xyzTitleColor="@color/G"
            app:xyzTitleSelectColor="@color/J"
            app:xyzTitleSize="@dimen/T7"
            app:xyzTitleTop="5dp" />


        <com.xyz.tabitem.BottmTabItem
            android:id="@+id/main4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:xyzIcon="@drawable/main4"
            app:xyzIconHeight="23dp"
            app:xyzIconWidth="23dp"
            app:xyzSelectIcon="@drawable/main4_xz"
            app:xyzSelectState="false"
            app:xyzTitle="@string/main4"
            app:xyzTitleColor="@color/G"
            app:xyzTitleSelectColor="@color/J"
            app:xyzTitleSize="@dimen/T7"
            app:xyzTitleTop="5dp" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttom_tab" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_above="@+id/buttom_tab"
        android:background="@drawable/yinying" />

</RelativeLayout>
