<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">


        <cn.gavinliu.android.lib.shapedimageview.ShapedImageView
            android:id="@+id/class_img"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/zhanwei2"
            app:round_radius="6dp"
            app:shape_mode="round_rect" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/class_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:maxLines="2"
                android:text="@string/title_lizi"
                android:textColor="@color/D"
                android:textSize="@dimen/T2"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/class_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/class_title"
                android:layout_marginTop="14dp"
                android:lineSpacingExtra="8dp"
                android:maxLines="2"
                android:text="@string/message_lizi"
                android:textColor="@color/B"
                android:textSize="@dimen/T4" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/class_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/K"
                    android:textSize="@dimen/T1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/class_old_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/price"
                    android:textColor="@color/G"
                    android:textSize="@dimen/T4" />


                <TextView
                    android:id="@+id/class_xueguo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/xueguo"
                    android:textColor="@color/G"
                    android:textSize="@dimen/T7" />

            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>


</LinearLayout>