<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout01" />


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/xingbie"
        android:textColor="@color/B"
        android:textSize="@dimen/T2" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginTop="96dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="59dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/nv"
                android:layout_width="63dp"
                android:layout_height="63dp">

                <ImageView
                    android:layout_width="63dp"
                    android:layout_height="63dp"
                    android:background="@drawable/nv" />

                <ImageView
                    android:id="@+id/nv_check"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xuanzhong1"
                    android:visibility="gone" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nv"
                android:textColor="@color/B"
                android:textSize="@dimen/T3" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="59dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/nan"
                android:layout_width="63dp"
                android:layout_height="63dp">

                <ImageView
                    android:layout_width="63dp"
                    android:layout_height="63dp"
                    android:background="@drawable/nan" />

                <ImageView
                    android:id="@+id/nan_check"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/xuanzhong1"
                    android:visibility="gone" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nan"
                android:textColor="@color/B"
                android:textSize="@dimen/T3" />


        </LinearLayout>


    </RelativeLayout>


    <TextView
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/anniu_next"
        android:enabled="false"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="15dp"
        android:text="@string/next"
        android:textColor="@color/E"
        android:textSize="@dimen/T1" />


</RelativeLayout>